--- a/docs/01. Basic Routing.md
+++ b/docs/01. Basic Routing.md
@@ -6,7 +6,7 @@ To get started with a minimal routing setup in client-side React, you need three
 
 routes.js:
 
-```
+```js
 import { RouteMapper } from "jarl-react";
 
 const routes = new RouteMapper([
@@ -23,4 +23,62 @@ const routes = new RouteMapper([
 export default routes;
 ```
 
-This is a very simple route map with two routes
+This is a very simple route map with two routes: a home page and an about page. The map describes the minimum amount of state required to "identify" that route. You can think of states as being descriptive object-based ids for the routes!
+
+Next, we'll set up a provider at the root level of our app. For some navigation or state storage flows you might want to build a custom provider, but for now we'll use a simple ready-to-go provider that ships with JARL (and uses component state to track the current location).
+
+index.js:
+
+```jsx
+import { SimpleProvider } from "jarl-react";
+import App from "./App";
+import routes from "./routes";
+
+// Using the history package to support browser history navigation
+import createHistory from "history/createBrowserHistory";
+const history = createHistory();
+
+// The provider will render our App component and pass in the routing state!
+export default () => (
+    <SimpleProvider routes={routes} history={history} component={App} />
+);
+```
+
+Finally we can now make use of the router state inside our app. JARL does not ship with components like `<Route>` that you might be used to working with on other libraries. We take the philosophy that a Route component is essentially the same a much simpler JavaScript construct: the `if` statement! Since we end up with the state as defined in our route table, we can simply react to that state: in fact here the correct construct is a `switch`.
+
+App.js:
+
+```jsx
+import { HomePage, AboutPage } from "./pages";
+
+// All the state values are injected straight into the App component
+export default ({ screen }) => {
+    switch (screen) {
+        case "home":
+            return <HomePage />;
+        case "about":
+            return <AboutPage />;
+    }
+};
+```
+
+And that's it! JARL keeps things very simple: there are no component APIs to learn, and you define the shape of your state however you want.
+
+There is one piece missing of course - we can't actually navigate between the pages yet! Let's see what a Menu component will look like...
+
+Menu.js:
+
+```jsx
+import { Link } from "jarl-react";
+
+export default () => (
+    <nav>
+        <Link to={screen: "home"}>Home</Link>
+        | <Link to={screen: "about"}>About</Link>
+    </nav>
+);
+```
+
+The `Link` component lets you use state in reverse: specify the state you want to link to, and JARL will generate the correct URL. Again, this takes advantage of the fact that state is essentially a unique identifier for a route.
+
+Next: 02. Dynamic Routing
