--- a/docs/03. Data Dependencies.md
+++ b/docs/03. Data Dependencies.md
@@ -6,7 +6,7 @@ Some analysis of this statement reveals a truth: data dependencies are inextrica
 
 JARL attempts to tackle this requirement head-on, rather than letting it be an afterthought.
 
-Let's take the previous example of a product page and see how this looks once we move the side-effects (actually loading the data) into our route map.
+Let's take the previous example of a product page and see how this looks once we move the side-effects (actually loading the data) into our route map, using `resolve` on our routes.
 
 routes.js:
 
@@ -21,7 +21,7 @@ const routes = new RouteMapper([
     {
         path: "/products/:productId",
         state: { page: "product" },
-        match: async ({ productId }) => {
+        resolve: async ({ productId }) => {
             const result = await fetch(`/api/products/${productId}`);
             const product = await result.json();
             return { product };
@@ -49,7 +49,7 @@ const routes = new RouteMapper([
     {
         path: "/products/:productSlug",
         state: { page: "product" },
-        match: async ({ productSlug }) => {
+        resolve: async ({ productSlug }) => {
             const response = await fetch(
                 `/api/productsBySlug?slug=${productSlug}`
             );
@@ -63,7 +63,7 @@ const routes = new RouteMapper([
     {
         path: "/products/:productSlug",
         state: { page: "productSearch", notFound: true },
-        match: async ({ productSlug }) => {
+        resolve: async ({ productSlug }) => {
             const response = await fetch(
                 `/api/productSearch?text=${productSlug.replace(" ", "")}`
             );
