[JARL] Breaking: renamed `withState` -> `withLocation`
Avoids naming conflict with recompose, and was a generally confusing
name anyway

--- a/docs/02. Dynamic Routing.md
+++ b/docs/02. Dynamic Routing.md
@@ -26,7 +26,7 @@ export default routes;
 This dynamic value will be merged into the resulting state object when navigating to a matching URL. We can therefore implement a ProductPage component like so:
 
 ```jsx
-import { withState } from "jarl-react";
+import { withLocation } from "jarl-react";
 
 class ProductPage extends Component {
     componentDidMount() {
@@ -43,9 +43,9 @@ class ProductPage extends Component {
     }
 }
 
-// Using the withState higher-order component to inject the
+// Using the withLocation higher-order component to inject the
 // location state as props into the component.
-export default withState()(ProductPage);
+export default withLocation()(ProductPage);
 ```
 
 Here we start to encounter one of the bigger problems that JARL aims to tackle. This route has a "data dependency": this will be dealt with in the next part.
