Rename RouteMapper to RouteMap and call it a day with renaming
Agonizing too much over changing things like state, context, match, stringify.

Actually these terms seem reasonable and can make it very clear what they are with documentation. `state` will only be using as a Route property, everywhere else should refer to `location`, which actually means the finished merged location after state->match->resolve processing.

--- a/docs/02. Dynamic Routing.md
+++ b/docs/02. Dynamic Routing.md
@@ -7,9 +7,9 @@ JARL uses the [`url-pattern`](https://github.com/snd/url-pattern) package to mat
 routes.js:
 
 ```js
-import { RouteMapper } from "jarl-react";
+import { RouteMap } from "jarl-react";
 
-const routes = new RouteMapper([
+const routes = new RouteMap([
     {
         path: "/",
         state: { page: "home" }
