--- a/docs/03. Data Dependencies.md
+++ b/docs/03. Data Dependencies.md
@@ -11,9 +11,9 @@ Let's take the previous example of a product page and see how this looks once we
 routes.js:
 
 ```js
-import { RouteMapper } from "jarl-react";
+import { RouteMap } from "jarl-react";
 
-const routes = new RouteMapper([
+const routes = new RouteMap([
     {
         path: "/",
         state: { page: "home" }
@@ -39,9 +39,9 @@ By initiating data loads during routing, we can ensure that data is available _b
 Handling data in our routes table provides some additional benefits. One of these is that we can reject the route by rejecting the promise. Consider this example:
 
 ```js
-import { RouteMapper } from "jarl-react";
+import { RouteMap } from "jarl-react";
 
-const routes = new RouteMapper([
+const routes = new RouteMap([
     {
         path: "/",
         state: { page: "home" }
